k8s/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
  labels:
    app: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
        - name: django
          image: arjundange/django-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          command: ["python","/app/manage.py","runserver","0.0.0.0:8000"]
